[sc-68320] Fix multiselect wrap

--- a/packages/portal-style/src/components/_forms.scss
+++ b/packages/portal-style/src/components/_forms.scss
@@ -298,7 +298,7 @@ select.form-control:not([multiple="multiple"]) {
 .react-select {
   .react-select__control {
     padding-top: 0;
-    height: 45px;
+    min-height: 45px;
     width: 100%;
     margin-left: 0;
 
